--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,32 +1,38 @@
-<nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
-  <div class="navbar-header">
-    <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
-  </div>
+<div *ngIf="authService.isUserLoggedIn()">
 
-  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
+  <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a>
+    </div>
 
-  <ul class="nav navbar-right navbar-top-links">
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="fa fa-user fa-fw"></i> Login <b class="caret"></b>
-      </a>
-      <ul class="dropdown-menu dropdown-user">
-        <li>
-          <a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
-        </li>
-        <li class="divider"></li>
-        <li><a (click)="logout()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
 
-</nav>
+    <ul class="nav navbar-right navbar-top-links">
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          <i class="fa fa-user fa-fw"></i> Login <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu dropdown-user">
+          <li>
+            <a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
+          </li>
+          <li class="divider"></li>
+          <!-- <li><a (click)="logout()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a> -->
+          <li><a routerLink="/logout"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
+
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+  </nav>
+
+</div>
