--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
       <br /><br />
-      <!-- <img src="../../../../assets/img/logotipo-ccb.png" class="logotipo" /> -->
+      <img src="../../../../assets/img/logotipo-ccb.png" class="logotipo" />
       <br />
       <hr>
       <h4 class="text-center">Fazer login</h4>
@@ -18,7 +18,7 @@
           <!-- <input [(ngModel)]="user.password" type="password" class="validate form-control" name="password"> -->
           <input type="password" name="password" [(ngModel)]="password" class="validate form-control">
         </div>
-        <button pButton type="submit" label="Entrar" (click)=checkLogin()></button>
+        <button pButton type="submit" label="Entrar" (click)=checkLogin() class="btn btn-primary btn-lg btn-block"></button>
         <!-- <button pButton type="submit" label="Entrar" (click)="login()"></button> -->
       </form>
     </div>
