Adiconando função para gerar PDF

--- a/src/app/meeting/meetings-authentication/meetings-authentication.component.html
+++ b/src/app/meeting/meetings-authentication/meetings-authentication.component.html
@@ -1,10 +1,12 @@
 <div class="container-fluid">
 
-  <br /><br /><br />
-
   <h1>Autenticação</h1>
 
   <hr>
+
+  <button pButton type="button" label="Gerar PDF" class="ui-button-info" (click)="gerarPDF()"
+    icon="pi pi-file-pdf"></button>
+  <br /><br />
 
   <p-panel header="Reunião" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
     <div class="ui-g">
@@ -63,7 +65,7 @@
   <div class="ui-g ui-fluid">
     <div class="form-group ui-g-12">
       <h3>Irmãos Autenticados:</h3>
-      <table class="table table-striped">
+      <table class="table table-striped" id="contentToConvert">
         <thead>
           <tr>
             <th class="text-center">Código</th>
