--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,14 @@
 
 <app-menubar></app-menubar>
 
-<div id="wrapper">
+<div [ngClass]="showContentWrapper()">
+  <div id="wrapper">
 
-  <div id="page-wrapper">
-    <router-outlet></router-outlet>
+    <div id="page-wrapper">
+      <router-outlet></router-outlet>
+    </div>
+
   </div>
-
 </div>
 
 <app-footer></app-footer>
