--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,7 @@
-
-
+<header class="main-header">
   <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a>
+      <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
     </div>
 
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,12 +17,6 @@
           <i class="fa fa-user fa-fw"></i> Login <b class="caret"></b>
         </a>
         <ul class="dropdown-menu dropdown-user">
-          <li>
-            <a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
-          </li>
           <li class="divider"></li>
           <!-- <li><a (click)="logout()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a> -->
           <li><a routerLink="/logout"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
@@ -34,5 +27,4 @@
     </ul>
 
   </nav>
-
-
+</header>
