--- a/src/app/schedule/schedule-list-meeting/schedule-list-meeting.component.html
+++ b/src/app/schedule/schedule-list-meeting/schedule-list-meeting.component.html
@@ -1,12 +1,11 @@
 <div class="container-fluid">
-
-  <br /><br /><br />
-
   <h1>Reuniões Agendadas</h1>
 
   <hr />
 
   <br />
+
+  <p-messages [value]="msgs"></p-messages>
 
   <table class="table table-striped">
     <thead>
@@ -27,9 +26,11 @@
         <td class="text-center">Vila Passos</td>
         <td class="text-center">Principal</td>
         <td class="text-center">
-          <button pButton type="button" label="Abrir" class="ui-button-info" (click)="openMeeting($event)"></button>
-          <button pButton type="button" label="Cancelar" class="ui-button-danger"
-            (click)="closeMeeting($event)"></button>
+          <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000"></p-confirmDialog>
+          <button type="button" (click)="openMeeting()" pButton icon="pi pi-check" label="Abrir" class="ui-button-info"
+            id="openMeeting"></button>
+          <button type="button" (click)="cancelMeeting()" pButton icon="pi pi-times" label="Cancelar"
+            class="ui-button-danger"></button>
         </td>
       </tr>
     </tbody>
