--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import '~bootstrap/dist/css/bootstrap.min.css'; */
 
+#page-wrapper {
+  padding: 50px 20px !important;
+}
+
 /* ------- NAVBAR ------ */
 .navbar-inverse {
   background-color: #007bff !important;
